infra/k8s/auth-postgres-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-postgres
  template:
    metadata:
      labels:
        app: auth-postgres
    spec:
      containers:
        - name: auth-postgres
          image: postgres:latest
          imagePullPolicy: "IfNotPresent"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-postgres-srv
spec:
  type: ClusterIP
  selector:
    app: auth-postgres
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
