infra/k8s/ticket-postgres-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-postgres
  template:
    metadata:
      labels:
        app: ticket-postgres
    spec:
      containers:
        - name: ticket-postgres
          image: postgres:latest
          imagePullPolicy: "IfNotPresent"
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-postgres-srv
spec:
  type: ClusterIP
  selector:
    app: ticket-postgres
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
